# librarymanager

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
.github/: copilot-instructions.md
src/librarymanager/: __init__.py  cli.py  config.py  extensions.py  models.py
src/librarymanager/routes/: api.py  auth.py  main.py
src/librarymanager/templates/: base.html  index.html  item_detail.html  item_list.html
src/librarymanager/templates/auth/: login.html  register.html
src/librarymanager/templates/forms/: new_boardgame.html  new_book.html  new_cd.html  new_dvd.html  new_item_index.html
tests/: test_api.py  test_app.py  test_cli.py  test_pagination_and_ui.py  test_templates.py
